k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: DEPLOYMENTNAME
  namespace: NAMESPACE
spec:
  selector:
    matchLabels:
      app: DEPLOYMENTNAME
  replicas: 1
  template:
    metadata:
      labels:
        app: DEPLOYMENTNAME
    spec:
      containers:
      - name: DEPLOYMENTNAME
        image: imageid
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "2048m"
            memory: "2Gi"
          requests:
            cpu: "2048m"
            memory: "2Gi"
