k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: SERVICENAME
 namespace: NAMESPACE
 labels: 
  app: SERVICENAME
spec:
 type: ClusterIP
 ports:
 - name: SERVICENAME
   port: 5000
   targetPort: 5000
 selector: 
  app: SERVICENAME
