k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 annotations:
  alb.ingress.kubernetes.io/group.name: eks-dev-products # use existing lb
  alb.ingress.kubernetes.io/load-balancer-name: eks-dev-products-app
  alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:463877552462:certificate/8ad6ed5d-f06b-48c0-8a3d-111783b3de10"
  alb.ingress.kubernetes.io/scheme: internet-facing
  alb.ingress.kubernetes.io/healthcheck-path: /
  alb.ingress.kubernetes.io/target-type: ip
  alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
  alb.ingress.kubernetes.io/ssl-redirect: '443'
 name: dev-nft-badge-service-ingress
 namespace: dev-nft-badge-service
spec:
 defaultBackend:
   service:
     name: defaultbackendsvc
     port:
       number: 80
 ingressClassName: alb
 rules:
  - host: dev-nft-badge.chingari.io
    http:
     paths:
      - backend:
         service:
          name: dev-nft-badge-service
          port:
           number: 5000
        pathType: Prefix
        path: /
